--- a/CG-iOS-SDK/Sources/CustomerGlu/Cells/BannerCell.xib
+++ b/CG-iOS-SDK/Sources/CustomerGlu/Cells/BannerCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="150" id="Ina-3S-dYo" customClass="BannerCellNew" customModule="CustomerGlu">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="150" id="Ina-3S-dYo" customClass="BannerCell" customModule="CustomerGlu">
             <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ina-3S-dYo" id="T81-gh-iMc">
@@ -52,9 +52,9 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="imgView" destination="Tub-Ao-DoF" id="F4b-N3-5gk"/>
-                <outlet property="shadowView" destination="OdA-cU-MPd" id="pGs-Wm-bwZ"/>
-                <outlet property="titleLbl" destination="Mvk-yl-ljA" id="72O-3S-UXv"/>
+                <outlet property="imgView" destination="Tub-Ao-DoF" id="kZA-iF-h9A"/>
+                <outlet property="shadowView" destination="OdA-cU-MPd" id="nJ6-jc-529"/>
+                <outlet property="titleLbl" destination="Mvk-yl-ljA" id="3dD-f7-jOK"/>
             </connections>
             <point key="canvasLocation" x="120" y="-23"/>
         </tableViewCell>
