--- a/CG-iOS-SDK/Sources/CustomerGlu/Resources/Storyboard.storyboard
+++ b/CG-iOS-SDK/Sources/CustomerGlu/Resources/Storyboard.storyboard
@@ -57,8 +57,31 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Faa-jb-O2j">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="88"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EIa-zk-Dte">
+                                        <rect key="frame" x="10" y="44" width="70" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="70" id="ZiQ-wv-tdG"/>
+                                            <constraint firstAttribute="height" constant="44" id="z6u-kw-uE0"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Back"/>
+                                        <connections>
+                                            <action selector="backButtonWithSender:" destination="Dv6-RS-fbx" eventType="touchUpInside" id="XNh-Hb-Qhu"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="EIa-zk-Dte" firstAttribute="leading" secondItem="Faa-jb-O2j" secondAttribute="leading" constant="10" id="YB5-Gj-DEn"/>
+                                    <constraint firstAttribute="height" constant="88" id="kF8-Fj-DSX"/>
+                                    <constraint firstAttribute="bottom" secondItem="EIa-zk-Dte" secondAttribute="bottom" id="zKW-oO-qZy"/>
+                                </constraints>
+                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" contentInsetAdjustmentBehavior="never" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="KlT-dN-xmg">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="93" width="414" height="803"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="Dv6-RS-fbx" id="Bmm-J1-ad2"/>
@@ -68,10 +91,13 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="KlT-dN-xmg" secondAttribute="trailing" id="8N3-Sk-1pV"/>
-                            <constraint firstItem="KlT-dN-xmg" firstAttribute="leading" secondItem="gk5-JS-YSi" secondAttribute="leading" id="8kU-qV-BNK"/>
-                            <constraint firstAttribute="bottom" secondItem="KlT-dN-xmg" secondAttribute="bottom" id="guY-jv-qeF"/>
-                            <constraint firstItem="KlT-dN-xmg" firstAttribute="top" secondItem="gk5-JS-YSi" secondAttribute="top" id="iQG-ZE-mD5"/>
+                            <constraint firstAttribute="trailing" secondItem="KlT-dN-xmg" secondAttribute="trailing" id="LWi-CT-CNZ"/>
+                            <constraint firstAttribute="bottom" secondItem="KlT-dN-xmg" secondAttribute="bottom" id="Sea-1D-fqT"/>
+                            <constraint firstItem="Faa-jb-O2j" firstAttribute="leading" secondItem="gk5-JS-YSi" secondAttribute="leading" id="Vd9-zC-0qE"/>
+                            <constraint firstItem="KlT-dN-xmg" firstAttribute="top" secondItem="Faa-jb-O2j" secondAttribute="bottom" constant="5" id="aJi-h7-jrM"/>
+                            <constraint firstAttribute="trailing" secondItem="Faa-jb-O2j" secondAttribute="trailing" id="cq8-kD-miZ"/>
+                            <constraint firstItem="KlT-dN-xmg" firstAttribute="leading" secondItem="gk5-JS-YSi" secondAttribute="leading" id="res-lA-Ejz"/>
+                            <constraint firstItem="Faa-jb-O2j" firstAttribute="top" secondItem="gk5-JS-YSi" secondAttribute="top" id="zPT-hV-0fW"/>
                         </constraints>
                     </view>
                     <connections>
